ADSM/static/css/adsm.css
/* ... */
.DirectSpread.assigned {
    background-color: rgb(161, 134, 87);
}

.IndirectSpread.assigned {
    background-color: rgb(146, 203, 170);
}

.AirborneSpread.assigned {
    background-color: rgb(52, 192, 209);
}

.spread-cell {
    border: solid 1px #B6B6B6;
    margin: 0px;
}

.spread-grid-table td {
    padding: 3px;
}

.spread-destinations {
    white-space: nowrap;
    /* overflow: hidden; */
    /* text-overflow: ellipsis; */
    max-width: 75px;/* Safari */
    -webkit-transform: rotate(-56deg);/* Firefox */
    -moz-transform: rotate(-45deg);
    padding-left: 25px;
    padding-top: 23px;
}

.spread-source {
    text-align: right;
}

.spread-display-selector * {
    display: inline-block;
    font-size: 20px;
    margin-right: 10px;
}

.spread-display-selector input {
    width: 26px;
    height: 17px;
    margin-top: 16px;
    background: white;
}
/*-------------------------------------------------------------*/
/*-----left aligned scrollbars-----*/
/*-------------------------------------------------------------*/
#center-panel>.fragment, #left-panel {
    direction: rtl; /*TODO this really really needs to change because it affects decedents. The desire here was to
    put the scrollbars on the left hand side, which should really be done with a scrollbar meta property.*/
}
#center-panel .fragment form,
#center-panel .fragment div,
#left-panel h1,
#left-panel div {
    direction: ltr;
}
::-webkit-scrollbar-thumb {
    box-shadow: none !important;
}
::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(0,0,0,0.15) !important;
}
/*-------------------------------------------------------------*/
/*-----output settings-----*/
/*-------------------------------------------------------------*/
.inline_h2 {
    margin-bottom: 10px;
}
/*----------------------------------------------------*/
/*----- map key -----*/
/*----------------------------------------------------*/
#legend {
    display:block;
    position: absolute;
    bottom: 13px; 
    left: 15px;
    width: 146px;
    height: 110px;
    font-size: 10px;
    color: #606060;
    padding-left: 5px;
    padding-top: 5px;
    background-color: rgba(255, 255, 255, .3);
    border-radius: 3px;
}
#legend-left, #legend-right {
    padding-right: 10px;
    display:block;
    float: left;
    position: relative;
    height: 100%;

}
#legend-left {
    padding-right: 15px;
    width: 60px;
    height: 68px;
}
.legend-label {
    display:block;
    height: 20px;
}
#legend-left .legend-label {
    text-align: right;
    line-height: 12px;
}
#legend-right .legend-label {
    padding-top: 11px;
}

.legend-values {
    position: absolute;
    display:block;
    width: 100%;
    height: 100%;

}
#legend-left span:first-child {
    position:absolute;
    top: 0;
}
#legend-left span:last-child {
    position:absolute;
    bottom: 0;
}
#legend-left .legend-values:after {
    content: "";
    width: 15px;
    height: 100%;
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0b326c), color-stop(16%,#0b326c), color-stop(17%,#335484), color-stop(33%,#335484), color-stop(34%,#59749a), color-stop(50%,#59749a), color-stop(51%,#7289aa), color-stop(66%,#7289aa), color-stop(67%,#c5cedc), color-stop(83%,#c5cedc), color-stop(84%,#ffffff), color-stop(100%,#ffffff)); 
    position: absolute;
    top: 0;
    left: 33px;
}
#legend-right {
    width: 70px;
}
#legend-right ul {
    margin-left: 0;
    padding-left: 0;
} 
#legend-right li {
    display: block;
    height: 20px;
    border-left: 20px solid #00FF00;
    margin-left: 0;
    margin-bottom: 4px;
    line-height: 20px;
    padding-left: 5px;
}
#legend-right li:first-child {
    border-color: #FF0000;
}
#legend-right li:last-child {
    border-color: #EA7D30;
}
@media screen and (max-height: 800px){
    #legend {
        transform: scale(.8);
        bottom: -3px;
        left: -3px;
        background-color: rgba(255,255,255,.4);
    }
}
/*----------------------------------------------------*/
/*----- results home -----*/
/*----------------------------------------------------*/
#summaryData th:first-child {
    width: 70%;
}
#summaryData td {
    vertical-align: top;
}
#summaryData tr td:nth-child(2) {
    padding-left: 10px;
}
#summaryData tr td{
    border-bottom: 1px solid #ebebeb;
}
#summaryData th {
    padding-bottom: 3px;
    padding-top: 10px;
}
#summaryData tr:first-of-type th{
    padding-top: 0;
}
#summaryData td {
    padding-bottom: 5px;
    padding-top: 5px;
}
@media screen and (max-width: 1200px){
    #summaryData th {
        font-size: 13px;
        padding-bottom: 0;
    }
    #summaryData td {
        font-size: 12px;
        padding-top: 3px;
        padding-bottom: 3px;
    }
}
.simulation_error {
    background-color: #d0343a;
    height: 120px;
    margin-bottom: 15px;
    text-align: center;
    vertical-align: middle;
    line-height: 15px;
    padding: 10px 10px 10px 10px;
}
.simulation_error_text {
    color: white;
    display: block;
}

/*----------------------------------------------------*/
/*----- global overrides -----*/
/*----------------------------------------------------*/
.action_link, .addNew a {
    background: transparent !important;
    color: #00bbef !important;
    border: none !important;
    outline: none !important;
    font-size: 13px;
    font-weight: 300;
    margin: 0;
    padding: 2px;
    opacity: .7;
    transition: all .2s ease;
}
.btn-primary.action_link:hover,
.btn-primary.action_link:active,
.btn-primary.action_link:focus,
.btn-primary.action_link:visited,
.action_link:hover,
.action_link:active,
.action_link:focus,
.action_link:visited,
.addNew a:hover  {
    background: transparent;
    color: #00bbef !important;
    font-weight: 300;
    border: none !important;
    outline: none !important;
    box-shadow: none;
    text-decoration: underline;
}

/**********Priority Widget***********************/

.ui-sortable { /*list ul element*/
    width: 200px;
    background-color: white;
}
/* ... */

